[gd_scene load_steps=20 format=2]

[ext_resource path="res://Graphics/Dino1.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Grass1.png" type="Texture" id=2]
[ext_resource path="res://Ralf.gd" type="Script" id=3]
[ext_resource path="res://Graphics/sky.jpg" type="Texture" id=4]
[ext_resource path="res://Graphics/Disco-2.png" type="Texture" id=5]
[ext_resource path="res://Graphics/dino-154909_640.png" type="Texture" id=6]
[ext_resource path="res://Graphics/birthday-hat-vector-7.jpg" type="Texture" id=7]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=8]
[ext_resource path="res://DeathText.gd" type="Script" id=9]
[ext_resource path="res://Graphics/Collectable1.png" type="Texture" id=10]
[ext_resource path="res://PartyHat1.gd" type="Script" id=11]
[ext_resource path="res://Collectable1.gd" type="Script" id=12]
[ext_resource path="res://Collectable2.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1879.13, 114.618 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.05922, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.08685, 11.7595 )

[sub_resource type="RectangleShape2D" id=6]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )

[node name="World" type="Node2D"]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 781.456, 833.44 )
scale = Vector2( 0.891697, 1.45122 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Floor"]
position = Vector2( 0, -14.8326 )
scale = Vector2( 1, 0.431679 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Floor"]
position = Vector2( 3809.25, -11.5475 )
rotation = 3.14159
scale = Vector2( 1.00559, -0.443809 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 3778.64, 4.37537 )
scale = Vector2( 3.04034, 1 )
shape = SubResource( 1 )

[node name="Ralf" type="KinematicBody2D" parent="."]
position = Vector2( 302.062, 626.495 )
scale = Vector2( 0.1, 0.1 )
z_index = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Ralf"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ralf/Area2D"]
scale = Vector2( 26.2, 41.8 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Ralf"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ralf"]
position = Vector2( 58.4637, -6.74579 )
scale = Vector2( 27.9112, 38.7103 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Ralf"]
position = Vector2( 3713.58, -1304.9 )
scale = Vector2( 10, 10 )
current = true
limit_left = -1000
limit_bottom = 830
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_top = 0.63
editor_draw_limits = true

[node name="Timer" type="Timer" parent="Ralf"]
one_shot = true

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 805.364, 260.632 )
scale = Vector2( 4.78165, 2.60072 )
z_index = -1
texture = ExtResource( 4 )

[node name="Disco" type="Sprite" parent="."]
position = Vector2( 1345.05, 593.186 )
scale = Vector2( 0.324919, 0.388613 )
z_index = -1
texture = ExtResource( 5 )

[node name="Floor2" type="StaticBody2D" parent="."]
position = Vector2( 1260.09, 359.745 )
scale = Vector2( 0.169494, 2.10604 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Floor2"]
position = Vector2( 0, -14.8326 )
scale = Vector2( 1, 0.431679 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Floor2"]
position = Vector2( 3809.25, -11.5475 )
rotation = 3.14159
scale = Vector2( 1.00559, -0.443809 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2"]
position = Vector2( 3828.76, 3.03086 )
scale = Vector2( 3.04034, 1 )
shape = SubResource( 1 )

[node name="Floor3" type="StaticBody2D" parent="."]
position = Vector2( -1232.62, 288.324 )
scale = Vector2( 0.201552, 0.949264 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Floor3"]
position = Vector2( 0, -14.8326 )
scale = Vector2( 5.01194, 0.431679 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Floor3"]
position = Vector2( 3809.25, -11.5475 )
rotation = 3.14159
scale = Vector2( 1.00559, -0.443809 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor3"]
position = Vector2( 3828.76, 3.03086 )
scale = Vector2( 3.04034, 1 )
shape = SubResource( 1 )

[node name="DyingText" type="Label" parent="."]
visible = false
margin_left = 471.768
margin_top = 404.474
margin_right = 708.768
margin_bottom = 435.474
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "				  				 Oh No!
Maby i'll be in time for the next party"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartyHat1" type="Area2D" parent="."]
position = Vector2( 528.117, 486.6 )
scale = Vector2( 0.32, 0.16 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="PartyHat1"]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PartyHat1"]
scale = Vector2( 15.64, 9.92 )
shape = SubResource( 4 )

[node name="Collectable1" type="Area2D" parent="."]
position = Vector2( 1458.72, 73.5505 )
scale = Vector2( 0.32, 0.16 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Collectable1"]
position = Vector2( -54.5663, 84.3306 )
scale = Vector2( 0.162895, 0.205722 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collectable1"]
position = Vector2( -54.5674, 69.4487 )
scale = Vector2( 15.64, 9.92 )
shape = SubResource( 4 )

[node name="Collectable2" type="Area2D" parent="."]
position = Vector2( 906.365, 502.964 )
scale = Vector2( 0.32, 0.16 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Collectable2"]
position = Vector2( -54.5663, 84.3306 )
scale = Vector2( 0.162895, 0.205722 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collectable2"]
position = Vector2( -54.5674, 69.4487 )
scale = Vector2( 15.64, 9.92 )
shape = SubResource( 4 )

[node name="Enemy1" type="Area2D" parent="."]
position = Vector2( 731.037, 633.857 )
scale = Vector2( 0.127668, 0.109817 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Enemy1"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy1"]
scale = Vector2( 15.64, 9.92 )
shape = SubResource( 4 )

[node name="survivedArea" type="Area2D" parent="Enemy1"]
position = Vector2( 349.09, -26.7998 )
scale = Vector2( 1.31335, -0.821212 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy1/survivedArea"]
position = Vector2( 107.824, -27.9736 )
scale = Vector2( 10.7127, 27.5897 )
shape = SubResource( 6 )

[node name="Enemy2" type="Area2D" parent="."]
position = Vector2( 1217.16, 89.6765 )
scale = Vector2( 0.127668, 0.109817 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Enemy2"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy2"]
scale = Vector2( 15.64, 9.92 )
shape = SubResource( 4 )

[node name="survivedArea" type="Area2D" parent="Enemy2"]
position = Vector2( 349.09, -26.7998 )
scale = Vector2( 1.31335, -0.821212 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy2/survivedArea"]
position = Vector2( 107.824, -27.9736 )
scale = Vector2( 10.7127, 27.5897 )
shape = SubResource( 6 )

[node name="ScoreCounter" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="ScoreCounter"]
margin_left = 64.263
margin_top = 75.7862
margin_right = 271.263
margin_bottom = 141.786
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreField" type="Label" parent="ScoreCounter"]
margin_left = 76.2943
margin_top = 95.5378
margin_right = 262.294
margin_bottom = 129.538
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hier sollte dein Score stehen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollectableField" type="Label" parent="ScoreCounter"]
margin_left = 128.154
margin_top = 121.139
margin_right = 314.154
margin_bottom = 155.139
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hier sind deine Collectables
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ScoreCounter"]
position = Vector2( 87.3141, 130.137 )
scale = Vector2( 0.0257352, 0.0323803 )
texture = ExtResource( 10 )

[node name="x" type="Label" parent="ScoreCounter"]
margin_left = 112.832
margin_top = 120.736
margin_right = 298.832
margin_bottom = 154.736
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathText" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="Panel" type="Panel" parent="DeathText"]
margin_left = 534.509
margin_top = 312.607
margin_right = 797.509
margin_bottom = 405.607
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathTextField" type="Label" parent="DeathText"]
margin_left = 582.0
margin_top = 345.495
margin_right = 768.0
margin_bottom = 387.495
custom_colors/font_color = Color( 0, 0, 0, 1 )
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="ralf_died" from="Ralf" to="ScoreCounter" method="_on_Ralf_ralf_died"]
[connection signal="ralf_died" from="Ralf" to="DeathText" method="_on_Ralf_ralf_died"]
[connection signal="timeout" from="Ralf/Timer" to="Ralf" method="_on_Timer_timeout"]
[connection signal="area_entered" from="PartyHat1" to="Ralf" method="_on_PartyHat1_area_entered"]
[connection signal="area_entered" from="PartyHat1" to="PartyHat1" method="_on_PartyHat1_area_entered"]
[connection signal="area_entered" from="Collectable1" to="ScoreCounter" method="_on_Collectable1_area_entered"]
[connection signal="area_entered" from="Collectable1" to="Collectable1" method="_on_Collectable1_area_entered"]
[connection signal="area_entered" from="Collectable2" to="ScoreCounter" method="_on_Collectable1_area_entered"]
[connection signal="area_entered" from="Collectable2" to="Collectable2" method="_on_Collectable2_area_entered"]
[connection signal="area_entered" from="Enemy1" to="Ralf" method="_on_Enemy1_area_entered"]
[connection signal="area_entered" from="Enemy1/survivedArea" to="ScoreCounter" method="_on_survivedArea_area_entered"]
[connection signal="area_entered" from="Enemy2" to="Ralf" method="_on_Enemy1_area_entered"]
[connection signal="area_entered" from="Enemy2/survivedArea" to="ScoreCounter" method="_on_survivedArea_area_entered"]
